--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="contenedor-header">
         <header>
             <div class="logo">
-                <a href="#">Nick</a>
+                <a href="#">Cristian</a>
             </div>
             <nav id="nav">
                 <ul>
@@ -37,8 +37,8 @@
             <div class="contenedor-img">
                 <img src="img/hero.png" alt="">
             </div>
-            <h1>NICK PEREZ</h1>
-            <h2>Ingeniero de Software - Experto UI/UX</h2>
+            <h1>CRISTIAN OLARTE</h1>
+            <h2>Diseñador Web - Diseñador Gráfico</h2>
             <div class="redes">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -53,7 +53,7 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Nick Perez.</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam unde soluta minima necessitatibus, voluptas consectetur vero officiis quas, explicabo deleniti repellendus aliquid debitis maiores numquam voluptate reprehenderit in delectus dolores.</p>
+            <p><span>Hola, soy Cristian Olarte.</span> Diseñador web/gráfico de profesión, me apasiona la creación de diseños visualmente atrapantes para las personas y brindar el máximo esfuerzo en cada proyecto que hago.</p>
 
             <div class="fila">
                 <!-- datos personales -->
@@ -62,7 +62,7 @@
                     <ul>
                         <li>
                             <strong>Cumpleaños</strong>
-                            15-01-1980
+                            25-03-2003
                         </li>
                         <li>
                             <strong>Teléfono</strong>
@@ -78,7 +78,7 @@
                         </li>
                         <li>
                             <strong>Dirección</strong>
-                            123 San Luis, Argentina
+                            123 San Luis, Perú
                         </li>
                         <li>
                             <strong>Cargo</strong>
@@ -104,8 +104,8 @@
                             <span>VIAJAR</span>
                         </div>
                         <div class="interes">
-                            <i class="fa-brands fa-apple"></i>
-                            <span>MAC OS</span>
+                            <i class="fa-brands fa-windows"></i>
+                            <span>WINDOWS</span>
                         </div>
                         <div class="interes">
                             <i class="fa-solid fa-person-hiking"></i>
@@ -146,7 +146,7 @@
                         <span>Javascript</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>75%</span>
+                                <span>65%</span>
                             </div>
                         </div>
                     </div>
@@ -170,7 +170,7 @@
                         <span>Wordpress</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>81%</span>
+                                <span>85%</span>
                             </div>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
                         <span>Dedicación</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>65%</span>
+                                <span>75%</span>
                             </div>
                         </div>
                     </div>
