--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             <h1>CRISTIAN OLARTE</h1>
             <h2>Diseñador Web - Diseñador Gráfico</h2>
             <div class="redes">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                <a href="#"><i class="fa-brands fa-discord"></i></a>
+                <a href="https://facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://discord.com"><i class="fa-brands fa-discord"></i></a>
             </div>
         </div>
     </section>
